# ngircd

./: .gitignore  AGENTS.md  CMakeLists.txt  CODEX_PROMPT.md  TASK.md  build_dll.bat  build_out.txt  cmake_config.txt  cmake_out.txt  compile_server_app.bat  ngircd-win32.conf  ngircd.motd  opencode.json  plan.md  ps_out.txt  rebuild.bat  rebuild2.bat  reorganize-structure.cmd  restructure-components.cmd  run-ngircd-win32.cmd  runtest.bat  test_out.txt
.claude/: settings.local.json
build-clean/: CMakeCache.txt
docs/refactor/: current-architecture.md  decision-log.md  dotnet-replacement-strategy.md  migration-plan.md  target-architecture.md
docs/refactor/modules/: channel_state.md  client_state.md  command_handlers.md  config.md  core_runtime.md  irc_protocol.md  logging.md  net_transport.md  platform.md  resolver.md  server_app.md
include/app/config/: config.h
include/app/host/: host.h
include/app/logging/: logging.h
include/app/server_app/: server_app.h
include/channel_state/: channel_state.h
include/client_state/: client_state.h
include/command_handlers/: command_handlers.h
include/config/: config.h
include/core/runtime/: module_api.h  service_table.h  status.h  version.h
include/core_runtime/: buffer.h  core_runtime.h  module_api.h
include/host/: host.h
include/irc_protocol/: irc_protocol.h
include/logging/: logging.h
include/net/resolver/: resolver.h
include/net/transport/: net_transport.h
include/net_transport/: net_transport.h
include/platform/: platform.h
include/protocol/command_handlers/: command_handlers.h
include/protocol/irc_protocol/: irc_protocol.h
include/resolver/: resolver.h
include/server_app/: server_app.h
include/state/channel_state/: channel_state.h
include/state/client_state/: client_state.h
original/src/ngircd/: conf.h  conn.h  io.h  log.h  module_iface.h  ngircd.h
original/src/ngircd/core/: conf.c  module_iface.c
original/src/ngircd/net/: conn.c
original/src/ngircd/platform/: ngircd.c
original/src/ngircd/proto/: irc-cap.c  join_error.c  login_flow.c  login_state.c  message_check.c  message_check.h  nick_check.c  nick_check.h  parse.c
src/app/config/: Config.cs  config.c
src/app/host/: host.c
src/app/logging/: Logging.cs  logging.c
src/app/server_app/: server_app.c
src/channel_state/: channel_state.c
src/client_state/: client_state.c
src/command_handlers/: command_handlers.c
src/config/: config.c
src/core/runtime/: core_runtime.c
src/core_runtime/: core_runtime.c
src/host/: host.c
src/irc_protocol/: irc_protocol.c
src/legacy_impl/server_runtime/: ngircd_daemon.c  ngircd_runtime_globals.c
src/logging/: logging.c
src/net/resolver/: resolver.c
src/net/transport/: net_transport.c
src/net_transport/: net_transport.c
src/ngircd_impl/: conn_shim.c  ngircd_daemon.c
src/platform/: Platform.cs  Platform.csproj  platform.c
src/platform/windows/include/: dirent.h  strings.h  win32compat.h
src/platform/windows/include/arpa/: inet.h
src/platform/windows/include/netinet/: ip.h
src/platform/windows/include/sys/: time.h
src/platform/windows/src/: win32_main.c  win32_proc.c  win32_sighandlers.c
src/protocol/command_handlers/: command_handlers.c
src/protocol/irc_protocol/: irc_protocol.c
src/resolver/: resolver.c
src/server/core/logging/: log.c  log.h
src/server/core/module/: module_iface.h
src/server/ngircd/core/: log.c
src/server/ngircd/net/: io.c
src/server/ngircd/platform/: ngircd.c
src/server/ngircd/proto/: irc-channel.c  irc.c  join_check.c  join_check.h  login_state.h  user_check.c  user_check.h
src/server/platform/: ngircd.c
src/server/proto/irc/: irc-cap.c  irc-login.c
src/server/proto/join/: join_error.h
src/server/proto/login/: login_check.c  login_check.h  login_flow.h
src/server_app/: server_app.c
src/state/channel_state/: channel_state.c
src/state/client_state/: client_state.c
src/state/connection/: io.h
src/state/login/: login.c
src/support/portab/: portab.h
tests/: branch_coverage_test.c  conf_func_stubs.c  conf_whitebox_test.c  config_module_test.c  core_runtime_test.c  full_coverage_test.c  host_wiring_test.c  irc_cap_end_test.c  join_check_test.c  join_error_test.c  log_io_resolver_test.c  log_io_test_support.c  logging_module_test.c  login_check_test.c  login_flow_test.c  login_state_test.c  message_check_test.c  module_iface_test.c  nick_check_test.c  platform_module_test.c  server_app_unit_test.c  test_support.c  user_check_test.c
tests/configs/: invalid.conf  ipv6.conf  long_values.conf  multi_server.conf  rich.conf  unknown_section.conf
win32/include/: config.h  grp.h  netdb.h  pwd.h  syslog.h  unistd.h
win32/include/netinet/: in.h  in_systm.h
win32/include/sys/: socket.h  un.h  wait.h
win32/src/: win32_resolve.c
